--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,16 +1,16 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
+owner: antosnio # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Ricar
+    url: https://www.ricar.cl
+  - name: Api Sublimonkeys
+    url: https://api.sublimonkeys.cl
+  - name: QA Sublimonkeys
+    url: https://qa.sublimonkeys.cl
+  - name: Admin Sublimonkeys
+    url: https://admin.sublimonkeys.cl
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
